[lworld] IdentityException should identify the value class

XMLWordPrintable

      When a value class instance is used with synchronized the MonitorStateException that is thrown should identify the class with a helpful message.

      For example,
      "Value classes cannot be synchronized: java.util.Optional"

            Assignee:
            Frederic Parain
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: