8282106: [lworld] IdentityException should identify the value class

Reviewed-by: thartmann